--- a/runsmartProject/src/sass/blocks/_buttons.scss
+++ b/runsmartProject/src/sass/blocks/_buttons.scss
@@ -15,6 +15,11 @@
         height: 50px;
         font-size: 16px;
     }
+    &_submit {
+        width: 100%;
+        height: 50px;
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 991px) {
@@ -24,6 +29,10 @@
         &_main {
             width: 290px;
             font-size: 15px;
+        }
+        &_submit {
+            width: 100%;
+            font-size: 14px;
         }
     }
 }
@@ -37,6 +46,10 @@
             width: 240px;
             font-size: 14px;
         }
+        &_submit {
+            width: 100%;
+            font-size: 13px;
+        }
     }
 }
 
@@ -46,6 +59,10 @@
         &_main {
             width: 230px;
             font-size: 13px;
+        }
+        &_submit {
+            width: 100%;
+            font-size: 12px;
         }
     }
 }
