--- a/runsmartProject/src/sass/blocks/_title.scss
+++ b/runsmartProject/src/sass/blocks/_title.scss
@@ -4,22 +4,36 @@
     text-transform: uppercase;
     text-align: center;
     color: #0d0d0d;
+    &_left {
+        font-size: 36px;
+        text-align: left;
+        color: #ffffff;
+    }
 }
 
 @media (max-width: 991px) {
     .title {
         font-size: 27px;
+        &_left {
+            font-size: 30px;
+        }
     }
 }
 
 @media (max-width: 767px) {
     .title {
         font-size: 23px;
+        &_left {
+            font-size: 24px;
+        }
     }
 }
 
 @media (max-width: 575px) {
     .title {
         font-size: 19px;
+        &_left {
+            font-size: 20px;
+        }
     }
 }
