--- a/runsmartProject/src/sass/style.scss
+++ b/runsmartProject/src/sass/style.scss
@@ -37,3 +37,5 @@ a {
 @import 'blocks/buttons';
 @import 'blocks/title';
 @import 'blocks/advantages';
+@import 'blocks/consultation';
+@import 'blocks/forms';
