--- a/runsmartProject/src/sass/blocks/_buttons.scss
+++ b/runsmartProject/src/sass/blocks/_buttons.scss
@@ -20,6 +20,11 @@
         height: 50px;
         font-size: 16px;
     }
+    &_mini {
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 991px) {
@@ -33,6 +38,10 @@
         &_submit {
             width: 100%;
             font-size: 14px;
+        }
+        &_mini {
+            width: 121px;
+            font-size: 12px;
         }
     }
 }
@@ -50,6 +59,10 @@
             width: 100%;
             font-size: 13px;
         }
+        &_mini {
+            width: 111px;
+            font-size: 11px;
+        }
     }
 }
 
@@ -63,6 +76,9 @@
         &_submit {
             width: 100%;
             font-size: 12px;
+        }
+        &_mini {
+            width: 101px;
         }
     }
 }
