--- a/runsmartProject/src/sass/style.scss
+++ b/runsmartProject/src/sass/style.scss
@@ -39,3 +39,6 @@ a {
 @import 'blocks/advantages';
 @import 'blocks/consultation';
 @import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/feed';
