--- a/runsmartProject/src/sass/blocks/_catalog.scss
+++ b/runsmartProject/src/sass/blocks/_catalog.scss
@@ -82,7 +82,7 @@
             text-transform: uppercase;
             color: $main_color;
             &:hover {
-                color: $main_color;
+                color: #ac0000;
             }
         }
         hr {
@@ -164,7 +164,7 @@
             text-transform: uppercase;
             color: $main-color;
             &:hover {
-                color: $main-color;
+                color: #ac0000;
             }
         }
     }
