--- a/runsmartProject/src/sass/blocks/_header.scss
+++ b/runsmartProject/src/sass/blocks/_header.scss
@@ -24,7 +24,7 @@
         font-weight: 700;
         color: #ffffff;
         &:hover {
-            color:#ffffff;
+            color:$main-color;
             text-decoration: none;
         }
     }
