--- a/runsmartProject/src/sass/blocks/_forms.scss
+++ b/runsmartProject/src/sass/blocks/_forms.scss
@@ -17,22 +17,35 @@
             margin-bottom: 20px;
         }
     }
+    &_mt25 {
+        margin-top: 25px;
+    }
 }
 
 @media (max-width: 991px) {
     .feed-form {
         margin-top: 34px;
+        &_mt25 {
+            margin: 0 auto;
+            margin-top: 25px;
+        }
     }
 }
 
 @media (max-width: 767px) {
     .feed-form {
         width: 270px;
+        &_mt25 {
+            width: 300px;
+        }
     }
 }
 
 @media (max-width: 575px) {
     .feed-form {
         width: 230px;
+        &_mt25 {
+            width: 300px;
+        }
     }
 }
