--- a/runsmartProject/src/sass/blocks/_promo.scss
+++ b/runsmartProject/src/sass/blocks/_promo.scss
@@ -51,6 +51,9 @@
             text-transform: uppercase;
             text-decoration: underline;
             color: #ffffff;
+            &:hover {
+                color: $main-color;
+            }
         }
     }
 }
