--- a/runsmartProject/src/sass/blocks/_modal.scss
+++ b/runsmartProject/src/sass/blocks/_modal.scss
@@ -40,6 +40,14 @@
     &_mini {
         min-height: 140px;
     }
+    .error {
+        margin-bottom: 15px;
+        border: 1px solid red;
+        text-align: center;
+    }
+    label.error {
+        border: none;
+    }
 }
 
 #consultation, #order, #thanks {
