--- a/runsmartProject/src/sass/style.scss
+++ b/runsmartProject/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'base/variables';
+@import 'base/animations';
 
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
@@ -44,3 +45,4 @@ a {
 @import 'blocks/feed';
 @import 'blocks/footer';
 @import 'blocks/modal';
+@import 'blocks/pageup';
