--- a/runsmartProject/src/sass/blocks/_catalog.scss
+++ b/runsmartProject/src/sass/blocks/_catalog.scss
@@ -128,12 +128,14 @@
             margin-left: 20px;
             transform: translateX(0%);
             transition: 0.5s all;
-            padding-left: 19px;
             margin-bottom: 0;
-            list-style-type: none;
             &_active {
                 transform: translateX(-100%);
                 margin-left: 0px;
+            }
+            ul {
+                padding-left: 19px;
+                list-style-type: none;
             }
             li {
                 position: relative;
