--- a/runsmartProject/src/sass/blocks/_footer.scss
+++ b/runsmartProject/src/sass/blocks/_footer.scss
@@ -53,6 +53,12 @@
         justify-content: center;
         align-items: center;
     }
+
+    iframe {
+        width: 100%;
+        height: 630px;
+        border: none;
+    }
 }
 
 @media (max-width: 991px) {
