--- a/runsmartProject/src/sass/libs/_font.scss
+++ b/runsmartProject/src/sass/libs/_font.scss
@@ -1,5 +1,6 @@
 @font-face {
     font-family: 'Museo Sans';
+    font-display: swap;
     src: url('../fonts/MuseoSansCyrl-300.woff') format('woff');
     font-weight: 300;
     font-style: normal;
@@ -7,6 +8,7 @@
 
 @font-face {
     font-family: 'Museo Sans';
+    font-display: swap;
     src: url('../fonts/MuseoSansCyrl-500.woff') format('woff');
     font-weight: 500;
     font-style: normal;
@@ -14,6 +16,7 @@
 
 @font-face {
     font-family: 'Museo Sans';
+    font-display: swap;
     src: url('../fonts/MuseoSansCyrl-700.woff') format('woff');
     font-weight: 700;
     font-style: normal;
