Script to fill the progress bar

--- a/portfolio/src/sass/blocks/_skill.scss
+++ b/portfolio/src/sass/blocks/_skill.scss
@@ -50,7 +50,7 @@
             row-gap: 30px;
             &-item {
                 display: grid;
-                grid-template-columns: 200px, 35px;
+                grid-template-columns: 200px 35px;
                 grid-template-rows: minmax(21px, auto) 14px;
                 justify-content: space-between;
                 align-content: space-between;
