--- a/cuda/src/sass/blocks/_media.scss
+++ b/cuda/src/sass/blocks/_media.scss
@@ -15,6 +15,12 @@
             font-size: 39px;
         }
     }
+    .about {
+        &__items {
+            padding: 83px 18px 0 18px;
+            gap: 41px
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -34,6 +40,11 @@
             font-size: 29px;
         }
     }
+    .about {
+        &__items {
+            grid-template-columns: repeat(3, 200px);
+        }
+    }
 }
 
 @media (max-width: 768px) {
@@ -51,6 +62,21 @@
             font-size: 22px;
         }
     }
+    .about {
+        padding-top: 90px;
+        padding-bottom: 110px;
+        &__title {
+            font-size: 36px;
+        }
+        &__subtitle {
+            font-size: 16px;
+        }
+        &__items {
+            padding: 83px 0 0 0;
+            grid-template-columns: repeat(2, 250px);
+            gap: 40px;
+        }
+    }
 }
 
 @media (max-width: 576px) {
@@ -59,6 +85,7 @@
         padding: 0 10px;
     }
     .home {
+        padding-top: 60px;
         padding-bottom: 60px;
         &__text {
             font-size: 24px;
@@ -67,5 +94,16 @@
     .btn {
         width: 250px;
         font-size: 15px;
+    }
+    .about {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        &__title {
+            line-height: 1;
+        }
+        &__items {
+            padding-top: 60px;
+            grid-template-columns: 1fr;
+        }
     }
 }
