--- a/cuda/src/sass/blocks/_about.scss
+++ b/cuda/src/sass/blocks/_about.scss
@@ -3,24 +3,6 @@
     padding-top: 119px;
     padding-bottom: 128px;
 
-    &__title {
-        font-size: 40px;
-        font-weight: 700;
-        line-height: 0.75;
-        text-transform: uppercase;
-        text-align: center;
-        color: #ffffff;
-    }
-
-    &__subtitle {
-        padding-top: 23px;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 1.44;
-        text-align: center;
-        color: #ffffff;
-    }
-
     &__items {
         padding: 83px 38px 0 38px;
         display: grid;
@@ -34,7 +16,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            min-height: 126px;
+            height: 126px;
             &:hover {
                 transform: scale(1.05);
             }
@@ -42,7 +24,7 @@
         h3 {
             margin-top: 60px;
             margin-bottom: 0;
-            font-size: 24px;
+            font-size: 20px;
             font-weight: 700;
             line-height: 0.75;
             text-transform: uppercase;
