--- a/cuda/src/sass/blocks/_media.scss
+++ b/cuda/src/sass/blocks/_media.scss
@@ -21,6 +21,12 @@
             gap: 41px
         }
     }
+    .team {
+        &__items {
+            padding: 78px 18px 0 18px;
+            gap: 41px;
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -45,6 +51,11 @@
             grid-template-columns: repeat(3, 200px);
         }
     }
+    .team {
+        &__items {
+            grid-template-columns: repeat(3, 200px);
+        }
+    }
 }
 
 @media (max-width: 768px) {
@@ -62,17 +73,26 @@
             font-size: 22px;
         }
     }
+    .title {
+        font-size: 36px;
+    }
+    .subtitle {
+        font-size: 16px;
+    }
     .about {
         padding-top: 90px;
         padding-bottom: 110px;
-        &__title {
-            font-size: 36px;
-        }
-        &__subtitle {
-            font-size: 16px;
-        }
         &__items {
             padding: 83px 0 0 0;
+            grid-template-columns: repeat(2, 250px);
+            gap: 40px;
+        }
+    }
+    .team {
+        padding-top: 90px;
+        padding-bottom: 110px;
+        &__items {
+            padding: 78px 0 0 0;
             grid-template-columns: repeat(2, 250px);
             gap: 40px;
         }
@@ -95,12 +115,20 @@
         width: 250px;
         font-size: 15px;
     }
+    .title {
+        line-height: 1;
+    }
     .about {
         padding-top: 60px;
         padding-bottom: 60px;
-        &__title {
-            line-height: 1;
+        &__items {
+            padding-top: 60px;
+            grid-template-columns: 1fr;
         }
+    }
+    .team {
+        padding-top: 60px;
+        padding-bottom: 60px;
         &__items {
             padding-top: 60px;
             grid-template-columns: 1fr;
