--- a/cuda/src/sass/style.scss
+++ b/cuda/src/sass/style.scss
@@ -15,6 +15,24 @@
     margin: 0 auto;
 }
 
+.title {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 0.75;
+    text-transform: uppercase;
+    text-align: center;
+    color: #ffffff;
+}
+
+.subtitle {
+    padding-top: 23px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.44;
+    text-align: center;
+    color: #ffffff;
+}
+
 .btn {
     width: 293px;
     margin: 54px auto 0 auto;
@@ -41,5 +59,6 @@
 @import 'blocks/header';
 @import 'blocks/home';
 @import 'blocks/about';
+@import 'blocks/team';
 
 @import 'blocks/media';
